--- a/dailystudio_blog_project/pubspec.yaml
+++ b/dailystudio_blog_project/pubspec.yaml
@@ -40,7 +40,9 @@ dependencies:
   cloud_firestore: ^4.7.1
   provider: ^6.0.5
   firebase_ui_auth: ^1.4.1
-
+  image_picker: ^0.8.7+5
+  firebase_storage: ^11.1.2
+  path_provider: ^2.0.15
 dev_dependencies:
   flutter_test:
     sdk: flutter
@@ -64,7 +66,8 @@ flutter:
   uses-material-design: true
 
   # To add assets to your application, add an assets section, like this:
-  # assets:
+  assets:
+    - assets/default.png
   #   - images/a_dot_burr.jpeg
   #   - images/a_dot_ham.jpeg
 
