--- a/dailystudio_blog_project/pubspec.yaml
+++ b/dailystudio_blog_project/pubspec.yaml
@@ -43,6 +43,7 @@ dependencies:
   image_picker: ^0.8.7+5
   firebase_storage: ^11.1.2
   path_provider: ^2.0.15
+  get: ^4.6.5
 dev_dependencies:
   flutter_test:
     sdk: flutter
