--- a/dailystudio_blog_project/pubspec.yaml
+++ b/dailystudio_blog_project/pubspec.yaml
@@ -44,6 +44,7 @@ dependencies:
   firebase_storage: ^11.1.2
   path_provider: ^2.0.15
   get: ^4.6.5
+  google_ml_kit: ^0.14.0
 dev_dependencies:
   flutter_test:
     sdk: flutter
