--- a/dailystudio_blog_project/pubspec.yaml
+++ b/dailystudio_blog_project/pubspec.yaml
@@ -89,11 +89,13 @@ flutter:
   # "family" key with the font family name, and a "fonts" key with a
   # list giving the asset and other descriptors for the font. For
   # example:
-  # fonts:
-  #   - family: Schyler
-  #     fonts:
-  #       - asset: fonts/Schyler-Regular.ttf
-  #       - asset: fonts/Schyler-Italic.ttf
+  fonts:
+    - family: gangwon
+      fonts:
+         - asset: assets/fonts/gangwon-Light.ttf
+           weight: 400
+         - asset: assets/fonts/gangwon-Bold.ttf
+           weight: 500
   #         style: italic
   #   - family: Trajan Pro
   #     fonts:
